--- a/year-widget.html
+++ b/year-widget.html
@@ -14,7 +14,7 @@
             text-align: center;
         }
         #progress-container {
-            width: 60%;
+            width: 100%;
             margin: 10px auto;
             background-color: #303030; /* Dark grey background for the progress container */
             border-radius: 5px;
@@ -22,10 +22,11 @@
         }
         #progress-bar {
             width: 0;
-            height: 15px;
-            background-color: #4CAF50; /* Green progress color */
-            line-height: 15px;
+            height: 20px;
+            background-color: #f0f0f0; /* Almost white grey progress color */
+            line-height: 20px;
             transition: width 0.5s;
+            color: black; /* Black color for the percentage text */
         }
     </style>
 </head>
@@ -69,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
