--- a/year-widget.html
+++ b/year-widget.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 10px;
-            background-color: #1e1e1e; /* Dark background color */
+            background-color: #191919; /* Updated background color to hex #191919 */
             color: white;
             text-align: center;
         }
