--- a/year-widget.html
+++ b/year-widget.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-    <h2>Year Percentage Progress</h2>
+    <h2>Year Progress</h2>
 
     <div id="progress-container">
         <div id="progress-bar">0%</div>
