--- a/year-widget.html
+++ b/year-widget.html
@@ -26,7 +26,7 @@
             background-color: #f0f0f0; /* Almost white grey progress color */
             line-height: 20px;
             transition: width 0.5s;
-            color: black; /* Black color for the percentage text */
+            color: 858585; /* Black color for the percentage text */
         }
     </style>
 </head>
